fixed alignment on landing page

--- a/style.css
+++ b/style.css
@@ -2,14 +2,12 @@
 
 body {
 	display: flex;
-	flex-wrap: wrap;
+	flex-direction: column;
 	font-family: 'Nunito', sans-serif;
 }
 
 .section {
 	width: 100%;
-	display: flex;
-	justify-content: center;
 	height: 100vh;
 }
 
@@ -44,9 +42,32 @@ a:visited {
 	color: #adadad;
 }
 
+/* styling for the landing page and contents */
+
 .landingpage {
 	background-color: white;
 }
+
+.name {
+	display: flex;
+	padding-top: 5vw;
+	font-size: 5vw;
+	justify-content: center;
+}
+
+.jobtitle {
+	display: flex;
+	justify-content: center;
+	font-size: 4vw;
+}
+
+.languages {
+	display: flex;
+	justify-content: space-evenly;
+	align-items: flex-end;
+	font-size: 3vw;
+}
+
 
 .portfolio {
 	background-color: green;
@@ -63,9 +84,7 @@ a:visited {
 
 	}
 
-	h1 {
-		color: red;
-	}
+
 }
 
 /* tablets */
@@ -79,7 +98,5 @@ and (max-width: 1024px) {
 @media only screen
 and (min-width: 1025px) {
 
-	h1 {
-		color: blue;
-	}
+
 }
